rust/cuprum-rust/tests/ui/fail/const_availability_export.stderr
error[E0015]: cannot call non-const function `is_available` in constants
 --> tests/ui/fail/const_availability_export.rs:3:30
  |
3 | const RUST_AVAILABLE: bool = _rust_backend_native::is_available();
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: calls in constants are limited to constant functions, tuple structs and tuple variants
